# formaloo

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  conftest.py  pyproject.toml  pytest.ini
apps/accounts/: models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/store/: admin.py  apps.py  models.py  schema.py  serializers.py  urls.py  views.py
apps/store/migrations/: 0001_initial.py
apps/store/tests/: test_app.py
config/: asgi.py  settings.py  urls.py
constants/: messages.py
core/: handlers.py  models.py  pagination.py  permissions.py
docs/: dashboard.md
envs/: .env.sample  .env.test
extensions/: spectacular.py
requirements/: base.txt  local.txt
scripts/: reformat  startup.sh
